[gd_scene load_steps=5 format=2]

[ext_resource path="res://WorldObjects/Technical/InteractionController/InteractionController.tscn" type="PackedScene" id=1]
[ext_resource path="res://WorldObjects/Technical/InteractionPopup/InteractionPopup.tscn" type="PackedScene" id=2]
[ext_resource path="res://WorldObjects/Technical/TextBoxController/DialogTextBoxController.tscn" type="PackedScene" id=3]
[ext_resource path="res://WorldObjects/Technical/AbstractDialogInteractionObject/AbstractDialogInteractionObject.gd" type="Script" id=4]

[node name="AbstractDialogInteractionObject" type="Node2D"]
script = ExtResource( 4 )

[node name="DialogTextBoxController" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -31 )
interaction_controller_path = NodePath("../InteractionController")

[node name="InteractionPopup" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -14 )

[node name="InteractionController" parent="." instance=ExtResource( 1 )]
